[package]
name = "tls-chat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chat"
path = "chat.rs"

[[bin]]
name = "client"
path = "client.rs"

[dependencies]
rustls = { version = "0.21", features = ["dangerous_configuration"] }
crossterm = "0.27"
ratatui = "0.24"
regex = "1.0"
rustls-pemfile = "1.0"
rustls-native-certs = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
pbkdf2 = "0.12"
